--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,9 +3,16 @@
 buildscript {
     ext {
         buildToolsVersion = "29.0.3"
+        
+        // Start RN Boilerplate
+        // minSdkVersion = 21
+        // compileSdkVersion = 29
+        // targetSdkVersion = 29
         minSdkVersion = 21
-        compileSdkVersion = 29
-        targetSdkVersion = 29
+        compileSdkVersion = 30
+        targetSdkVersion = 30
+        // End RN Boilerplate
+
         ndkVersion = "20.1.5948944"
     }
     repositories {
