--- a/package.json
+++ b/package.json
@@ -11,10 +11,44 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@babel/plugin-syntax-jsx": "^7.14.5",
+    "@expo/vector-icons": "^12.0.5",
+    "@native-base/formik-ui": "^0.1.3",
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-picker/picker": "^1.16.1",
+    "axios": "^0.21.1",
+    "axios-hooks": "^2.6.3",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-preset-expo": "^8.3.0",
+    "expo-font": "^9.1.0",
+    "formik": "^2.2.9",
+    "native-base": "^3.0.0-next.36",
     "react": "17.0.1",
     "react-dom": "^17.0.2",
     "react-native": "0.64.0",
-    "react-native-web": "^0.15.5"
+    "react-native-async-storage": "^0.0.1",
+    "react-native-dotenv": "^2.5.5",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-reanimated": "^2.2.0",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^3.4.0",
+    "react-native-svg": "^12.1.1",
+    "react-native-unimodules": "^0.13.3",
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-web": "^0.17.0",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
+    "react-navigation-tabs": "^2.11.1",
+    "react-number-format": "^4.6.3",
+    "react-redux": "^7.2.4",
+    "react-screen": "^0.1.7",
+    "redux": "^4.1.0",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.3.0",
+    "styled-system": "^5.1.5",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
